--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,43 @@
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "io.spring.gradle:dependency-management-plugin:1.0.3.RELEASE"
+    }
+}
 plugins {
     id 'java' // or 'groovy' Must be explicitly applied
-    id 'com.github.johnrengelman.shadow' version '1.2.2'
+//    id 'com.github.johnrengelman.shadow' version '1.2.2'
 }
 
 apply plugin: 'java'
 apply plugin: 'application'
-apply plugin: 'com.github.johnrengelman.shadow'
-
-version = '1.0'
-targetCompatibility = 1.8
-mainClassName = 'eu.tjago.apps.ivonatalker.IvonaTalkerApp'
+//apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: "io.spring.dependency-management"
 
 repositories {
-    jcenter()
     mavenCentral()
 }
 
-dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.12'
-    compile 'com.ivona:ivona-speechcloud-sdk-java:1.0.0'
-    testCompile 'junit:junit:4.12'
+
+version = '1.0'
+targetCompatibility = 1.8
+mainClassName = 'eu.tjago.apps.pollytalker.IvonaTalkerApp'
+
+dependencyManagement {
+    imports {
+        mavenBom 'software.amazon.awssdk:bom:2.0.0-preview-1'
+    }
 }
+
+dependencies {
+//    compile 'software.amazon.awssdk:s3'
+    compile 'com.amazonaws:aws-java-sdk-polly:1.11.77'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
 jar {
     baseName = 'ivona-talker-app'
     manifest {
